[package]
name = "repub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
epub = "2.0.0"
quick-xml = "0.31.0"
rayon = "1.8.0"
regex = "1.10.2"
walkdir = "2.3.2"
zip = "0.6.6"
